--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Baud的个人主页"
 description: "技术博客与个人作品集"
-baseurl: "https://de-bao.github.io"
+baseurl: ""
 url: "https://de-bao.github.io/Baud"
 
 # 构建设置
